--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 
 <body>
 
+  <h1> metamorphosis </h1>
+  <h3> Metamorphosis, the process in which a caterpillar 
+    transforms into a butterfly. Certainly, a 
+    special and spectacular process in which a small, 
+    lowly, worm-like creature transitions into a beautiful 
+    dancer in the sky.</h3>
+
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
     <div class="container py-2 py-md-5">
@@ -58,7 +65,7 @@
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
+          <h3> Work </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiisexplicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
         </div>
       </div>
@@ -82,7 +89,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Johan Stanworth</h2>
+            <h2>keybo!</h2>
             <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
