--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyPortfolio Bootstrap Template - Index</title>
+  <title>metamorphosis</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,12 +36,6 @@
 
 <body>
 
-  <h1> metamorphosis </h1>
-  <h3> Metamorphosis, the process in which a caterpillar 
-    transforms into a butterfly. Certainly, a 
-    special and spectacular process in which a small, 
-    lowly, worm-like creature transitions into a beautiful 
-    dancer in the sky.</h3>
 
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
@@ -90,7 +84,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>keybo!</h2>
-            <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
+            <p class="mb-0"> an entity &amp; foreign space object </p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
