--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -37,11 +37,11 @@
 <body>
 
   <h1> metamorphosis </h1>
-  <p> Metamorphosis, the process in which a caterpillar 
+  <p><em>Metamorphosis, the process in which a caterpillar 
     transforms into a butterfly. Certainly, a 
     special and spectacular process in which a small, 
     lowly, worm-like creature transitions into a beautiful 
-    dancer in the sky.</p>
+    dancer in the sky.</em></p>
 
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
@@ -51,8 +51,8 @@
           <ul class="custom-menu">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
+            <li><a href="services.html">Art</a></li>
+            <li><a href="works.html">Visual Stories</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
