--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Boxed Water</h3>
+                <h3>|Astro the Cat</h3>
                 <span>Web</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_1.jpg">
+              <img class="img-fluid" src="photographs/astro-the-cat.png">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
