--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>|Astro the Cat</h3>
+                <h3>Astro the Cat</h3>
                 <span>Web</span>
               </div>
               <img class="img-fluid" src="photographs/astro-the-cat.png">
@@ -118,7 +118,7 @@
                 <h3>Build Indoo</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" src="photographs/astronaut-alien.png">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -127,7 +127,7 @@
                 <h3>Cocooil</h3>
                 <span>Branding</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_3.jpg">
+              <img class="img-fluid" src="photographs/autumn-day.png">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -136,7 +136,7 @@
                 <h3>Nike Shoe</h3>
                 <span>Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" src="photographs/calico-and-birb.png">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -145,7 +145,7 @@
                 <h3>Kitchen Sink</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_5.jpg">
+              <img class="img-fluid" src="photographs/clouds.png">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -154,9 +154,29 @@
                 <h3>Amazon</h3>
                 <span>brandingn</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_6.jpg">
+              <img class="img-fluid" src="photographs/companionship.png">
             </a>
           </div>
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Amazon</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/company.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Amazon</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/dreams-of-dying.png">
+            </a>
+          </div>
+
         </div>
       </div>
     </section><!-- End  Works Section -->
