--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
 <body>
 
   <h1> metamorphosis </h1>
-  <p><em>Metamorphosis, the process in which a caterpillar 
-    transforms into a butterfly. Certainly, a 
-    special and spectacular process in which a small, 
-    lowly, worm-like creature transitions into a beautiful 
-    dancer in the sky.</em></p>
+ 
 
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
@@ -75,7 +71,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">metamorphosis</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
@@ -89,8 +85,12 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>keybo!</h2>
-            <p class="mb-0"> an entity &amp; foreign space object </p>
+            <h2>welcome-to-my-universe</h2>
+            <p class="mb-0"> Metamorphosis, the process in which a caterpillar 
+              transforms into a butterfly. Certainly, a 
+              special and spectacular process in which a small, 
+              lowly, worm-like creature transitions into a beautiful 
+              dancer in the sky. </p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
