--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
 
 <body>
 
-  <h1> metamorphosis </h1>
- 
-
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
     <div class="container py-2 py-md-5">
@@ -85,7 +82,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>welcome-to-my-universe</h2>
+            <h2>welcome to my universe</h2>
             <p class="mb-0"> Metamorphosis, the process in which a caterpillar 
               transforms into a butterfly. Certainly, a 
               special and spectacular process in which a small, 
