--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             </div>
           </div>
         </div>
+        <!-- Portfolio Grid Section-->
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
@@ -112,7 +113,7 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Build Indoo</h3>
+                <h3>astronaut-alien</h3>
                 <span>Photography</span>
               </div>
               <img class="img-fluid" src="photographs/astronaut-alien.png">
@@ -121,7 +122,7 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Cocooil</h3>
+                <h3>autumn-day</h3>
                 <span>Branding</span>
               </div>
               <img class="img-fluid" src="photographs/autumn-day.png">
@@ -130,7 +131,7 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Nike Shoe</h3>
+                <h3>calico-and-birb</h3>
                 <span>Design</span>
               </div>
               <img class="img-fluid" src="photographs/calico-and-birb.png">
@@ -139,7 +140,7 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Kitchen Sink</h3>
+                <h3>clouds</h3>
                 <span>Photography</span>
               </div>
               <img class="img-fluid" src="photographs/clouds.png">
@@ -157,7 +158,7 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Amazon</h3>
+                <h3>company</h3>
                 <span>brandingn</span>
               </div>
               <img class="img-fluid" src="photographs/company.png">
@@ -167,14 +168,226 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Amazon</h3>
+                <h3>dreams-of-dying</h3>
                 <span>brandingn</span>
               </div>
               <img class="img-fluid" src="photographs/dreams-of-dying.png">
             </a>
           </div>
 
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>drunken-dreams</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/drunken-dreams.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Father-child</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/Father-child.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>fields</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/fields.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>glimpse-of-hope</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/glimpse-of-hope.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>how-much-longer</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/how-much-longer.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>i-just-want</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/i-just-want.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>immediately</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/immediately.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>in-the-valley</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/in-the-valley.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>little-garden</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/little-garden.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>lost-in-the-fog</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/lost-in-the-fog.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>missing-summer</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/missing-summer.png">
+            </a>
+          </div>
+          
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>mountains</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/mountains.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>oneliness</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/oneliness.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>quiet-mornings</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/quiet-mornings.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>strong-hold</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/strong-hold.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>sun</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/sun.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>sunset-skies</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/sunset-skies.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>sunset</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/sunset.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>the-void</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/the-void.png">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>tidal</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/tidal">
+            </a>
+          </div>
+
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>where-could-i-go</h3>
+                <span>brandingn</span>
+              </div>
+              <img class="img-fluid" src="photographs/where-could-i-go.png">
+            </a>
+          </div>
+          
+
         </div>
+        <!-- End of Portfolio Grid-->
       </div>
     </section><!-- End  Works Section -->
 
