--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>welcome to my universe</h2>
-            <p class="mb-0"> Metamorphosis, the process in which a caterpillar 
+            <h2>metamophosis</h2>
+            <p class="mb-0"> The process in which a caterpillar 
               transforms into a butterfly. Certainly, a 
               special and spectacular process in which a small, 
               lowly, worm-like creature transitions into a beautiful 
