--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>metamorphosis</title>
+  <title>crawling-to-metamorphosis</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -75,6 +75,7 @@
     </div>
   </nav>
 
+  <!-- End of Navigation Bar-->
   <main id="main">
 
     <!-- ======= Works Section ======= -->
@@ -82,7 +83,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>metamophosis</h2>
+            <h2>metamorphosis</h2>
             <p class="mb-0"> The process in which a caterpillar 
               transforms into a butterfly. Certainly, a 
               special and spectacular process in which a small, 
@@ -102,9 +103,9 @@
         <!-- Portfolio Grid Section-->
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/astro-the-cat.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Astro the Cat</h3>
+                <h3>astro-the-cat</h3>
                 <span>Web</span>
               </div>
               <img class="img-fluid" src="photographs/astro-the-cat.png">
@@ -149,7 +150,7 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Amazon</h3>
+                <h3>companionship</h3>
                 <span>brandingn</span>
               </div>
               <img class="img-fluid" src="photographs/companionship.png">
