--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- Portfolio Grid Section-->
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="pages/astro-the-cat.html" class="item-wrap fancybox">
+            <a href="astro-the-cat.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>astro-the-cat</h3>
                 <span>Web</span>
