--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="astronaut-alien.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>astronaut-alien</h3>
                 <span>Photography</span>
