--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <h3>tidal</h3>
                 <span>brandingn</span>
               </div>
-              <img class="img-fluid" src="photographs/tidal">
+              <img class="img-fluid" src="photographs/tidal.png">
             </a>
           </div>
 
