--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- Portfolio Grid Section-->
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="astro-the-cat.html" class="item-wrap fancybox">
+            <a href="pages/astro-the-cat.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>astro-the-cat</h3>
                 <span>Web</span>
@@ -112,7 +112,7 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="astronaut-alien.html" class="item-wrap fancybox">
+            <a href="pages/astronaut-alien.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>astronaut-alien</h3>
                 <span>Photography</span>
@@ -121,7 +121,7 @@
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>autumn-day</h3>
                 <span>Branding</span>
@@ -130,7 +130,7 @@
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>calico-and-birb</h3>
                 <span>Design</span>
@@ -139,7 +139,7 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>clouds</h3>
                 <span>Photography</span>
@@ -148,7 +148,7 @@
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>companionship</h3>
                 <span>brandingn</span>
@@ -157,7 +157,7 @@
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>company</h3>
                 <span>brandingn</span>
@@ -167,7 +167,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>dreams-of-dying</h3>
                 <span>brandingn</span>
@@ -177,7 +177,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>drunken-dreams</h3>
                 <span>brandingn</span>
@@ -187,7 +187,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Father-child</h3>
                 <span>brandingn</span>
@@ -197,7 +197,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>fields</h3>
                 <span>brandingn</span>
@@ -207,7 +207,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>glimpse-of-hope</h3>
                 <span>brandingn</span>
@@ -217,7 +217,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>how-much-longer</h3>
                 <span>brandingn</span>
@@ -227,7 +227,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>i-just-want</h3>
                 <span>brandingn</span>
@@ -237,7 +237,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>immediately</h3>
                 <span>brandingn</span>
@@ -247,7 +247,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>in-the-valley</h3>
                 <span>brandingn</span>
@@ -257,7 +257,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>little-garden</h3>
                 <span>brandingn</span>
@@ -267,7 +267,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>lost-in-the-fog</h3>
                 <span>brandingn</span>
@@ -277,7 +277,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>missing-summer</h3>
                 <span>brandingn</span>
@@ -287,7 +287,7 @@
           </div>
           
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>mountains</h3>
                 <span>brandingn</span>
@@ -297,7 +297,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>oneliness</h3>
                 <span>brandingn</span>
@@ -307,7 +307,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>quiet-mornings</h3>
                 <span>brandingn</span>
@@ -317,7 +317,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>strong-hold</h3>
                 <span>brandingn</span>
@@ -327,7 +327,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>sun</h3>
                 <span>brandingn</span>
@@ -337,7 +337,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>sunset-skies</h3>
                 <span>brandingn</span>
@@ -347,7 +347,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>sunset</h3>
                 <span>brandingn</span>
@@ -357,7 +357,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>the-void</h3>
                 <span>brandingn</span>
@@ -367,7 +367,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>tidal</h3>
                 <span>brandingn</span>
@@ -377,7 +377,7 @@
           </div>
 
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="pages/work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>where-could-i-go</h3>
                 <span>brandingn</span>
